Mon Dec 15 18:53:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/sync.rb (Sync_m#sync_try_lock): wrong variable name fixed.
	  a patch from [ruby-core:20561]

	* lib/sync.rb (Sync_m::Err.Fail): turn off Thread.critical before
	  exit.

Thu Dec 11 21:09:47 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_next, enumerator_rewind),
	  lib/generator.rb (Enumerator#rewind): If the enclosed object
	  responds to a "rewind" method, call it.

Thu Dec 11 21:07:56 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb, lib/rss/maker/0.9.rb, lib/rss/maker/base.rb:
	RSS::Maker.[] returns a maker class corresponds to passed version.

	* test/rss/test_maker_*.rb: add tests for RSS::Maker.[].

Thu Dec 11 20:38:26 2008  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_enumerator.rb: Add tests for the recently added
	  features.

Thu Dec 11 20:36:26 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/generator.rb (Enumerator#__generator): Now that
	  Enumerator::Generator is defined, the Generator here must be
	  referred to as ::Generator.

Thu Dec 11 19:33:10 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_initialize): Add an ability to generate
	  an enumerator from a block. [ruby-dev:35903]

Thu Dec 11 19:08:38 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enum_each_with_object): Add
	  Enumerable#each_with_object and Enumerator#with_object.

Wed Dec 10 21:35:12 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb (RSS::Maker.[]): add.
	Suggested by Akinori MUSHA. Thanks!!! [ruby-dev:37210]

	* NEWS: add an entry for the above change.

Wed Dec 10 12:51:14 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_next): Fix a typo: s/rewinded/rewound/.

	* lib/generator.rb (Enumerator#next): Ditto.

Tue Dec  9 03:21:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: fix for continued lines.  based on a patch from
	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:20420].
